--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "@emailjs/browser": "^3.6.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@hookform/resolvers": "^2.9.1",
     "@mui/icons-material": "^5.8.2",
     "@mui/material": "^5.8.2",
+    "apisauce": "^2.1.5",
+    "axios": "^0.27.2",
+    "jwt-decode": "^3.1.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.32.2",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
